--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.25.0
-pandas==2.2.2
-numpy==1.26.4
+streamlit>=1.25.0,<1.35.0
 scikit-learn==1.4.2
 joblib==1.4.0
+pandas==2.2.2
+numpy==1.26.4
