--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit>=1.25.0,<1.35.0
-scikit-learn==1.4.2
-joblib==1.4.0
+streamlit==1.34.0
 pandas==2.2.2
 numpy==1.26.4
+matplotlib==3.8.4
+seaborn==0.13.2
+scikit-learn==1.3.2
+joblib==1.4.2
